# FINAM_HACK

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.local.yml  pipeline_diagram.drawio  pyproject.toml  test.py  test_moex_parser.py
alembic/: env.py
alembic/versions/: 1a84671aeee6_добавил_поле_страны.py  5e6fbfb3fc53_новая_таблица_tickets.py  6a97deef7aed_create_events_table.py  aa2f6501ca93_изменил_таблицу_events.py  c2b4aad9b361_events.py
app_analytics/api/: fast_api.py
app_analytics/api/v1/: __init__.py  health.py
app_analytics/api/v1/internal/: __init__.py  market_data.py  news.py  telegram.py  tickets.py
app_analytics/api/v1/middlewares/: auth.py  logging.py
app_analytics/api/v1/public/: __init__.py  generation.py  telegram.py
app_analytics/application/use_cases/: __init__.py  add_market_data.py  base.py  get_tickets.py
app_analytics/application/use_cases/generate/: generate.py
app_analytics/core/: database.py  exceptions.py  http_client.py  logging.py  vector_database.py
app_analytics/core/config/: __init__.py  base.py
app_analytics/domain/entyties/: event.py
app_analytics/domain/repos/: __init__.py  event.py
app_analytics/infra/: clickhouse_database.py  database.py  llm.py  vector_database.py
app_analytics/infra/clickhouse_models/: __init__.py  market_data.py
app_analytics/infra/finance/: __init__.py  moex_finance.py  yahoo_finance.py
app_analytics/infra/models/: __init__.py  events.py  tickets.py
app_analytics/infra/repos/: __init__.py  events.py  market_data.py  tickets.py
app_analytics/services/: generation_service.py
app_analytics/services/data_preprocess_service/: preprocess_data_prompt.md  schemas.py  service.py
app_analytics/services/hotness_service/: hotnes_calculating_service.py  schemas.py
app_parsing/: celery_app.py  settings.py  tasks.py
app_parsing/domain/value_objects/: news.py
app_parsing/infra/analytics_app_service/: __init__.py  analytics_app_service.py  base.py
app_parsing/infra/markets/: __init__.py  moex.py  yahoo.py
app_parsing/parsers/: __init__.py  base.py  interfax.py  markets.py  moex_rss.py  parsers_manager.py  rbc.py  telegram.py
client/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
client/src/: types.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: LayoutClient.tsx  ThemeProvider.tsx  ThemeScript.tsx
client/src/hooks/: useGetNewsMutation.ts
client/src/services/: news.service.ts
client/src/utils/: getHotnessColor.ts
prompts/: Claude _Sonnet _4_event_actuality.txt  Claude_Sonnet_4_draft.txt  gemini20flash_clearify_news.txt
test/: interfax_news_20251004_225342.json  interfax_report_20251004_225342.txt
tests/: moex_news_20251004_210128.json  moex_report_20251004_210128.txt  test_moex_parser.py
(+21 files in other folders)
