[project]
name = "finam-hack"
version = "0.1.0"
description = ""
authors = [
    {name = "Naury",email = "koertyf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "httpx-retries (>=0.4.0,<0.5.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "chromadb (>=1.1.0,<2.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.0.7,<6.0.0)",
    "telethon (>=1.25.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "feedparser (>=6.0.10,<7.0.0)",
    "python-dateutil (>=2.8.2,<3.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "moexapi (>=1.6.34,<2.0.0)",
    "yahooquery (>=2.4.1,<3.0.0)",
    "clickhouse-sqlalchemy (>=0.3.2,<0.4.0)",
    "clickhouse-connect (>=0.9.2,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
